--- a/index.html
+++ b/index.html
@@ -8,64 +8,65 @@
   </head>
   <body>
     <h1>Resume Builder</h1>
+    <form id="resumeform">
+      <fieldset>
+        <legend>Persnol Information</legend>
 
-    <!-- Resume Input Form -->
-    <form id="resume-form">
-      <h2>Personal Information</h2>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+        <label for="fullName">Full Name: </label>
+        <input type="text" id="fullName" name="fullName" required /> <br />
 
-      <h2>Education</h2>
-      <label for="education">Education:</label>
-      <input type="text" id="education" name="education" required />
+        <label for="email">Email: </label>
+        <input type="email" id="email" name="email" required /> <br />
 
-      <h2>Work Experience</h2>
-      <label for="work-experience">Work Experience:</label>
-      <input type="text" id="work-experience" name="work-experience" required />
+        <label for="age">Age: </label>
+        <input type="age" id="age" name="age" required /> <br />
 
-      <h2>Skills</h2>
-      <label for="skills">Skills (comma separated):</label>
-      <input type="text" id="skills" name="skills" required />
+        <label for="address">Address: </label>
+        <input type="address" id="address" name="address" required /> <br />
 
-      <button type="submit">Generate Resume</button>
+        <label for="phoneNumber">Phone Number: </label>
+        <input
+          type="phoneNumber"
+          id="phoneNumber"
+          name="phoneNumber"
+          required
+        />
+        <br />
+
+        <!-- profile Picture -->
+        <label for="profilePicture">Profile Picture</label>
+        <input type="file" id="profilePicture" accept="image/*" required />
+      </fieldset>
+
+      <fieldset>
+        <legend>Education</legend>
+        <label for="education">Education</label>
+        <textarea id="education" name="education" rows="4" required> </textarea>
+        <br />
+      </fieldset>
+
+      <fieldset>
+        <legend>Experience</legend>
+        <label for="experience">Experience</label>
+        <textarea id="experience" name="experience" rows="4" required>
+        </textarea>
+        <br />
+      </fieldset>
+
+      <fieldset>
+        <legend>Skills</legend>
+        <label for="skills">Skills</label>
+        <textarea id="skills" name="skills" rows="4" required> </textarea>
+        <br />
+      </fieldset>
+
+      <button type="submit">Generate Resume Below</button>
     </form>
 
-    <!-- Modal for Generated Resume -->
-    <div id="resume-modal" class="modal">
-      <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <div id="generated-resume">
-          <h2>Generated Resume</h2>
-
-          <section id="personal-info">
-            <h3>Personal Information</h3>
-            <p contenteditable="true">Name: <span id="display-name"></span></p>
-            <p contenteditable="true">
-              Email: <span id="display-email"></span>
-            </p>
-          </section>
-
-          <section id="display-education">
-            <h3>Education</h3>
-            <p contenteditable="true"><span id="education-content"></span></p>
-          </section>
-
-          <section id="display-work-experience">
-            <h3>Work Experience</h3>
-            <p contenteditable="true">
-              <span id="work-experience-content"></span>
-            </p>
-          </section>
-
-          <section id="display-skills">
-            <h3>Skills</h3>
-            <ul id="skills-list" contenteditable="true"></ul>
-          </section>
-        </div>
-      </div>
+    <div id="resumeOutput" class="hidden">
+      <!-- Resume Will Be Generated Below -->
     </div>
+    <div id="buttonContainer"></div>
 
     <script src="main.js"></script>
   </body>
